recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: ';' expected but '(' found.
var rep:List[Int](l.length-2) = l(0)::l(l.length-2)
                 ^